# ConvertX-CN

./: .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  Dockerfile.full  Dockerfile.lite  README.md  compose.yaml  docker-compose.production.yml  eslint.config.ts  package.json  upstream-changelog.md
.github/workflows/: api-server-release.yml  docker-build-lite.yml  docker-e2e-tests.yml  docker-pulls-history.yml  release.yml
api-server/: .env.api.example  .env.example  Cargo.toml  Dockerfile  README.md
api-server/docs/: API_SPEC.md  RAS-API-SPEC.md
api-server/scripts/: health_check.sh
api-server/src/: auth.rs  config.rs  engine.rs  error.rs  graphql.rs  handlers.rs  job.rs  lib.rs  main.rs  models.rs  openapi.rs
api-server/src/models/: api.rs  engine.rs  job.rs  mod.rs
api-server/src/routes/: admin.rs  engines.rs  formats.rs  health.rs  info.rs  jobs.rs  mod.rs  validate.rs
api-server/src/services/: dispatcher.rs  engine_registry.rs  mod.rs
api-server/tests/: integration_tests.rs
docs/: 02-部署指南.md  04-功能總覽.md  05-API文件.md
docs/API/: 05-API文件.md  ConvertX_API_Server_更新說明.md  RAS-API完整使用文件.md  引擎擴充規範.md  端點.md  管理API.md  總覽.md
docs/功能說明/: 自動格式推斷.md  跨架構支援.md  輸出治理.md
docs/測試/: 測試策略.md
docs/部署指南/: Docker部署.md
docs/配置設定/: 安全性.md
models/: README.md
models/mineru/: README.md
public/: inference.js  script.js  settings.js  version.json
scripts/: download-mineru-models.sh  download-models.sh  download-vlm-gguf.sh  entrypoint.sh  generate-mineru-config.sh  start-llama-server.sh  verify-installation.sh  verify-models.sh
src/: index.tsx
src/components/: base.tsx  header.tsx  settingsButton.tsx
src/converters/: babeldoc.ts  ffmpeg.ts  graphicsmagick.ts  imagemagick.ts  libreoffice.ts  main.ts  mineru.ts  ocrmypdf.ts  pandoc.ts  pdfmathtranslate.ts  resvg.ts  vips.ts
src/db/: db.ts  types.ts
src/helpers/: apiKeys.ts  printVersions.ts
src/inference/: formatPredictionModel.ts  inferenceService.ts
src/locales/: af.json  am.json  ar.json  bg.json  bn.json  ca.json  cs.json  cy.json  da.json  de.json  el.json  en.json  es.json  et.json  eu.json  fa.json  fi.json  fil.json  fr.json  ga.json  gl.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  is.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  mk.json  ml.json  mr.json  ms.json  (+25 more)
src/pages/: convert.tsx  convertersApi.tsx  enginesApi.tsx  listConverters.tsx  rasApi.tsx  settings.tsx
src/transfer/: archiveManager.ts  constants.ts  ffmpegGovernance.ts  index.ts  traPackager.ts  traTypes.ts
