[package]
name = "convertx-api"
version = "1.0.0"
edition = "2021"
authors = ["ConvertX Team"]
description = "ConvertX API Server - Lightweight proxy for ConvertX-CN"
license = "MIT"
repository = "https://github.com/pi-docket/ConvertX-CN"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
