[package]
name = "convertx-api"
version = "2.0.2"
edition = "2021"
authors = ["ConvertX Team"]
description = "ConvertX API Server - REST & GraphQL API for ConvertX-CN"
license = "MIT"
repository = "https://github.com/pi-docket/ConvertX-CN"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT Authentication
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for job IDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for proxying (use rustls to avoid OpenSSL cross-compilation issues)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# File handling
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3"
zip = "2"

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
